cmd/sphinx-proxy/k8s/04-traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fox-proxy-traefik-vpn-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: fox-proxy-traefik-vpn
    k8s.kuboard.cn/workload: fox-proxy-traefik-vpn
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-fox-proxy-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.internal-devops.development.npool.top
      http: &http_rules
        paths:
          - path: /api/fox-proxy
            backend:
              serviceName: fox-proxy-http
              servicePort: 50000
    - host: api.internal-devops.development.xpool.top
      http: *http_rules
    - host: www.internal-devops.development.npool.top
      http: *http_rules
    - host: www.internal-devops.development.xpool.top
      http: *http_rules
